docs/kyverno-policies/tests/networking/restrict-wildcard-egress/bad-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bad-netpol
spec:
  podSelector: {}
  policyTypes: ["Egress"]
  egress:
    - {}
